<resources>
    <string name="app_name">Cool Music</string>
    <string name="titulo">Seleccione una canción</string>
    <string name="tituloPantalla">Canciones</string>
    <string name="opcAgregar">Agregar Cancion</string>

    <string name="amanda">Amanda Castro</string>
    <string name="caro">Carolina Rodríguez</string>
    <string name="eduardo">Eduardo Noyola</string>

    <string name="canciones">Canciones</string>

    <string name="acerca">Acerca de</string>

    <string name="Creadores">Creadores</string>
    <string name="materia">Desarrollo de Aplicaciones Móviles</string>
    <string name="info">Cool Music es una aplicación móvil que nos permite reproducir música, contiene
                        por defecto 3 canciones con la opción de poder agregar más canciones a partir
                        de la memoria interna del teléfono.</string>
</resources>
