<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradado2"
    tools:context=".Menu">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="359dp"
        android:layout_height="302dp"
        android:layout_marginEnd="1dp"
        android:layout_marginTop="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/colorCeleste" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="230dp"
        android:layout_height="227dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:srcCompat="@drawable/music" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        android:text="@string/app_name"
        android:textColor="@color/colorBlanco"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <Button
        android:id="@+id/btnCanciones"
        android:layout_width="179dp"
        android:layout_height="139dp"
        android:layout_marginBottom="125dp"
        android:background="@drawable/boton_borde"
        android:onClick="songs"
        android:text="@string/canciones"
        android:textColor="@color/colorBlanco"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnAbout"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnAbout"
        android:layout_width="183dp"
        android:layout_height="139dp"
        android:layout_marginBottom="125dp"
        android:layout_marginEnd="1dp"
        android:background="@drawable/boton_borde"
        android:onClick="acercaDe"
        android:text="@string/acerca"
        android:textColor="@color/colorBlanco"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCanciones" />

</android.support.constraint.ConstraintLayout>